force-app/main/default/objects/Industry_Picklist_Config__mdt/Industry_Picklist_Config__mdt.object-meta.xml
<CustomObject>
    <description>Stores industry-based picklist value mappings for dynamic picklist filtering on Account fields. Each record maps an Industry value and Field API Name to a semicolon-separated list of allowed picklist values.</description>
    <label>Industry Picklist Config</label>
    <pluralLabel>Industry Picklist Configs</pluralLabel>
</CustomObject>