force-app/main/default/objects/Industry_Picklist_Config__mdt/fields/Allowed_Values__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Values__c</fullName>
    <description>Semicolon-separated list of allowed picklist values for the configured Industry and Field API Name combination. Each token is trimmed of whitespace before use. Example: &quot;SaaS; PaaS; IaaS&quot; for Technology industry on Sub_Industry__c.</description>
    <label>Allowed Values</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>