force-app/main/default/objects/Industry_Picklist_Config__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>The API name of the Account field whose picklist values are being configured (e.g. Sub_Industry__c, Compliance_Framework__c). Used as the primary filter key in SOQL queries from the Apex controller.</description>
    <label>Field API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>