force-app/main/default/objects/Industry_Picklist_Config__mdt/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>The Account Industry value this configuration applies to. Must match the API value of the Industry picklist field on Account (e.g. Technology, Healthcare, Finance).</description>
    <label>Industry</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>