force-app/main/default/objects/Industry_Picklist_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether this configuration record is included in picklist value lookups. Inactive records are excluded from all SOQL queries in the Apex controller, allowing safe soft-deletion of configuration without data loss.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>